--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.moodup.movies.ui.MainActivity">
+    tools:context="com.moodup.movies.ui.MainActivity"
+    android:layout_margin="@dimen/margin_home">
 
     <fragment
         android:id="@+id/homeFragment"
