--- a/app/src/main/res/layout/movie_row.xml
+++ b/app/src/main/res/layout/movie_row.xml
@@ -8,7 +8,7 @@
     android:weightSum="5">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/movie_picture"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
@@ -17,7 +17,7 @@
         android:contentDescription="@string/movie_picture" />
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/movie_title"
         android:padding="8dp"
         android:textSize="18sp"
         android:layout_width="0dp"
