--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_nav"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/navFragment">
 
     <fragment
-        android:id="@+id/homeFragment"
+        android:id="@+id/navFragment"
         android:name="com.moodup.movies.ui.home.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_detailsFragment"
             app:destination="@id/detailsFragment" />
@@ -17,7 +17,6 @@
     <fragment
         android:id="@+id/detailsFragment"
         android:name="com.moodup.movies.ui.details.DetailsFragment"
-        android:label="fragment_details"
-        tools:layout="@layout/fragment_details" >
-    </fragment>
+        android:label="@string/details"
+        tools:layout="@layout/fragment_details"></fragment>
 </navigation>
