--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,18 @@
     android:scrollbars="vertical"
     android:layout_width="match_parent"
     android:layout_height="0dp"
+    android:visibility="visible"
     android:layout_weight="9"/>
 
-
+    <TextView
+        android:id="@+id/no_results_textView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="9"
+        android:textSize="32sp"
+        android:text="@string/no_results"
+        android:textAlignment="center"
+        android:gravity="center_horizontal"
+        android:paddingTop="60dp"
+        android:visibility="gone"/>
 </LinearLayout>
