--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,7 +21,7 @@
     android:scrollbars="vertical"
     android:layout_width="match_parent"
     android:layout_height="0dp"
-    android:visibility="visible"
+    android:visibility="gone"
     android:layout_weight="9"/>
 
     <ProgressBar android:id="@+id/progressBar"
@@ -33,7 +33,7 @@
         android:visibility="gone"/>
 
     <TextView
-        android:id="@+id/no_results_textView"
+        android:id="@+id/results_textView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="9"
