--- a/app/src/main/res/layout/movie_row.xml
+++ b/app/src/main/res/layout/movie_row.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="100dp"
+    android:layout_margin="5dp"
     android:weightSum="5">
 
     <ImageView
@@ -12,17 +12,38 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
+        android:contentDescription="@string/movie_picture"
         android:padding="8dp"
-        app:srcCompat="@android:mipmap/sym_def_app_icon"
-        android:contentDescription="@string/movie_picture" />
+        app:srcCompat="@android:mipmap/sym_def_app_icon" />
 
-    <TextView
-        android:id="@+id/movie_title"
-        android:padding="8dp"
-        android:textSize="18sp"
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="3"
         android:layout_height="match_parent"
-        tools:text="Title" />
+        android:layout_weight="3"
+        android:orientation="vertical"
+        android:weightSum="4">
+
+        <TextView
+            android:id="@+id/movie_title"
+            android:layout_margin="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:padding="8dp"
+            android:textSize="18sp"
+            tools:text="Title" />
+
+        <Button
+            android:id="@+id/add_to_favourites_button"
+            android:background="@color/green"
+            android:textColor="@android:color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:padding="5dp"
+            android:layout_margin="5dp"
+            android:layout_weight="2"
+            android:text="@string/add_to_favourites" />
+
+    </LinearLayout>
 
 </LinearLayout>
