--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -14,9 +14,10 @@
             android:id="@+id/action_homeFragment_to_detailsFragment"
             app:destination="@id/detailsFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/detailsFragment"
         android:name="com.moodup.movies.ui.details.DetailsFragment"
         android:label="@string/details"
-        tools:layout="@layout/fragment_details"></fragment>
+        tools:layout="@layout/fragment_details" />
 </navigation>
