--- a/app/src/main/res/drawable-v24/remove_from_favourites_rounded_btn.xml
+++ b/app/src/main/res/drawable-v24/remove_from_favourites_rounded_btn.xml
@@ -2,7 +2,7 @@
 <!--  res/drawable/rounded_edittext.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
-    <solid android:color="#301934"/>
+    <solid android:color="#B22222"/>
     <corners
         android:bottomRightRadius="15dp"
         android:bottomLeftRadius="15dp"
