--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -51,9 +51,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="20dp"
         android:fillViewport="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/add_to_favourites_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.543"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
+            android:layout_marginBottom="25dp"
             tools:text="Description" />
     </ScrollView>
 
@@ -118,13 +118,18 @@
         app:layout_constraintTop_toBottomOf="@+id/movie_picture_details"
         tools:text="Format" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/add_to_favourites_btn"
+        android:layout_width="0dp"
+        android:text="@string/add_to_favourites"
+        android:textColor="@android:color/white"
+       android:background="@color/green"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 
-<!--    val id: Int,-->
-<!--    val thumbnail: Thumbnail,-->
-<!--    val title: String,-->
-<!--    val creators: Creators,-->
-<!--    val description: String,-->
-<!--    val format: String,-->
-<!--    val pageCount: Int,-->
-<!--    val prices: List<Price>-->
+</androidx.constraintlayout.widget.ConstraintLayout>
