--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -59,7 +59,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:background="@drawable/rounded_btn"
+        android:background="@drawable/auth_rounded_btn"
         android:gravity="center"
         android:letterSpacing="0.2"
         android:padding="15dp"
