--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -61,7 +61,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:background="@drawable/rounded_btn"
+        android:background="@drawable/auth_rounded_btn"
         android:letterSpacing="0.2"
         android:padding="15dp"
         android:text="@string/signup"
