gradient to card and title fix at the home fragment

--- a/app/src/main/res/layout/movie_row.xml
+++ b/app/src/main/res/layout/movie_row.xml
@@ -19,6 +19,8 @@
 
         <TextView
             android:id="@+id/movie_title"
+            android:ellipsize="end"
+            android:maxLines="2"
             android:layout_margin="5dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
