--- a/app/src/main/res/layout/card_view_favourites.xml
+++ b/app/src/main/res/layout/card_view_favourites.xml
@@ -31,16 +31,18 @@
             android:layout_height="wrap_content"
             android:padding="30dp"
             android:layout_margin="16dp"
-            android:background="@drawable/card_border">
+            android:background="@drawable/card_gradient">
 
             <TextView
                 android:id="@+id/movie_favourites_title"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:textSize="16sp"
+                android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.503"
