--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:padding="5dp"
-        android:text="@string/favourites_movies"
+        android:text="@string/favourites"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
