splash screen/settings/logout

--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -9,104 +9,54 @@
     android:background="@color/colorPrimary"
     tools:context="com.moodup.movies.ui.authentication.SignupFragment">
 
+
     <TextView
-        android:id="@+id/textView"
-        android:letterSpacing="0.1"
-        android:textAlignment="center"
+        android:id="@+id/resetPasswordTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="148dp"
+        android:letterSpacing="0.1"
         android:padding="10dp"
-        android:text="@string/login"
+        android:text="@string/reset_password"
+        android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/email_login_text"
-        android:inputType="text"
+        android:id="@+id/resetPassword_email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="128dp"
         android:background="@drawable/rounded_edittext"
         android:hint="@string/email"
+        android:inputType="text"
         android:padding="15dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <EditText
-        android:id="@+id/password_login_text"
-        android:inputType="textPassword"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:background="@drawable/rounded_edittext"
-        android:hint="@string/password"
-        android:padding="15dp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/email_login_text" />
-
+        app:layout_constraintTop_toBottomOf="@+id/resetPasswordTitle" />
 
     <Button
-        android:id="@+id/login_btn"
+        android:id="@+id/reset_password_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/auth_rounded_btn"
         android:gravity="center"
         android:letterSpacing="0.2"
         android:padding="15dp"
-        android:text="@string/login"
+        android:text="@string/reset_password"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/password_login_text" />
-
-    <TextView
-        android:id="@+id/forgot_password_btn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:gravity="center"
-        android:letterSpacing="0.1"
-        android:padding="15dp"
-        android:text="@string/forgot_password"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline2" />
-
-    <TextView
-        android:id="@+id/login_signup_btn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:letterSpacing="0.1"
-        android:padding="15dp"
-        android:text="@string/signup"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/forgot_password_btn"
-        app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/login_btn"
-        app:layout_constraintVertical_bias="0.585" />
+        app:layout_constraintTop_toBottomOf="@+id/resetPassword_email" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
