--- a/app/src/main/res/drawable/auth_rounded_btn.xml
+++ b/app/src/main/res/drawable/auth_rounded_btn.xml
@@ -2,7 +2,7 @@
 <!--  res/drawable/rounded_edittext.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
-    <solid android:color="#4B0082"/>
+    <solid android:color="#7D20C1"/>
     <corners
         android:bottomRightRadius="15dp"
         android:bottomLeftRadius="15dp"
